[iOS] Improve fix for NTP flicker during first run.

The existing fix for the NTP flickering in when the FRE view is shown doesn't work
when the BVC itself is presented. This CL improves that fix by attaching the view used
to mask the BVC appearing to the BVC's view before it appears.

Bug: 798042
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I8ddb8a1867ff84d15b912e607dfce3f180d011e9